[gd_scene load_steps=19 format=3 uid="uid://csxkcr6ypn0co"]

[ext_resource type="Script" uid="uid://cy45y1gngsvpc" path="res://scripts/main_menu.gd" id="1_svfcs"]
[ext_resource type="Texture2D" uid="uid://qsniyx8hejti" path="res://art/Button.png" id="2_i24e3"]
[ext_resource type="FontFile" uid="uid://dg25u82redilh" path="res://fonts/Modern Pixels.ttf" id="3_h1kfm"]
[ext_resource type="Script" uid="uid://dnix2iwkcyjmf" path="res://scripts/credits_and_message.gd" id="4_0daba"]
[ext_resource type="Texture2D" uid="uid://covben7slrjyd" path="res://art/MenuDoki.png" id="5_8flc3"]
[ext_resource type="Script" uid="uid://lg0pc6d5kbaw" path="res://scripts/doki_png.gd" id="6_2rgj0"]
[ext_resource type="Texture2D" uid="uid://cvoevpo61wuvs" path="res://art/Untitled-1.png" id="7_4ie63"]
[ext_resource type="Script" uid="uid://c8ayfpouqd5td" path="res://scripts/title.gd" id="8_u40tv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(1, 1, 1, 1)
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_jix8l"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 30, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkkf"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 6, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe12f"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 54, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtwp"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 30, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy7ct"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 6, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o4t1"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 54, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_w44g7"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 30, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm266"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 6, 56, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8g3n"]
atlas = ExtResource("2_i24e3")
region = Rect2(4, 54, 56, 21)

[node name="Main menu" type="Node2D"]
script = ExtResource("1_svfcs")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1216.0
offset_bottom = 696.0
theme_override_styles/panel = SubResource("StyleBoxFlat_glbon")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 32.0
offset_right = 40.0
offset_bottom = 72.0

[node name="Start" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 65.0
offset_top = 321.0
offset_right = 257.0
offset_bottom = 385.0
texture_normal = SubResource("AtlasTexture_jix8l")
texture_pressed = SubResource("AtlasTexture_nlkkf")
texture_hover = SubResource("AtlasTexture_qe12f")
ignore_texture_size = true
stretch_mode = 6

[node name="Label" type="Label" parent="Button_manager/Start"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_h1kfm")
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Load" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 272.0
offset_top = 320.0
offset_right = 464.0
offset_bottom = 384.0
texture_normal = SubResource("AtlasTexture_8qtwp")
texture_pressed = SubResource("AtlasTexture_dy7ct")
texture_hover = SubResource("AtlasTexture_0o4t1")
stretch_mode = 6

[node name="Label" type="Label" parent="Button_manager/Load"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_h1kfm")
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 64.0
offset_top = 400.0
offset_right = 256.0
offset_bottom = 464.0
texture_normal = SubResource("AtlasTexture_w44g7")
texture_pressed = SubResource("AtlasTexture_cm266")
texture_hover = SubResource("AtlasTexture_g8g3n")
stretch_mode = 6

[node name="Label" type="Label" parent="Button_manager/Quit"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_h1kfm")
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits and Message" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 272.0
offset_top = 400.0
offset_right = 464.0
offset_bottom = 464.0
texture_normal = SubResource("AtlasTexture_w44g7")
texture_pressed = SubResource("AtlasTexture_cm266")
texture_hover = SubResource("AtlasTexture_g8g3n")
stretch_mode = 6
script = ExtResource("4_0daba")

[node name="Label" type="Label" parent="Button_manager/Credits and Message"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_h1kfm")
text = "Credits & message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(752, 344)
scale = Vector2(0.492646, 0.492646)

[node name="DokiPNG" type="Sprite2D" parent="Node2D"]
position = Vector2(-39.1429, 41.1092)
scale = Vector2(1.02383, 1.02383)
texture = ExtResource("5_8flc3")
script = ExtResource("6_2rgj0")

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(304, 176)
scale = Vector2(0.066398, 0.066398)

[node name="Title" type="Sprite2D" parent="Node2D2"]
texture = ExtResource("7_4ie63")
script = ExtResource("8_u40tv")

[connection signal="pressed" from="Button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Button_manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_manager/Credits and Message" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_manager/Credits and Message" to="." method="_on_credits_and_message_pressed"]
